# TucanCore

./: CMakeLists.txt  library.h
Bridges/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
Math/: MathF.cpp  MathF.h  Matrix.cpp  Matrix.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Vector.cpp  Vector.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
